--- a/android-application/ChineseCheckers/src/main/res/values/strings.xml
+++ b/android-application/ChineseCheckers/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
 <resources>
 
     <string name="app_name">Chinese Checkers</string>
+    <string name="action_help">Help</string>
     <string name="action_settings">Settings</string>
     <string name="offline_start_game">Start Game</string>
     <string name="title_activity_offline_configuration">OfflineConfigurationActivity</string>
@@ -10,5 +11,6 @@
     <string name="title_activity_offline_game">OfflineGameActivity</string>
     <string name="offline_move_done">Done</string>
     <string name="offline_move_reset">Reset</string>
+    <string name="title_activity_help">HelpActivity</string>
 
 </resources>
