--- a/android-application/ChineseCheckers/src/main/res/values/strings.xml
+++ b/android-application/ChineseCheckers/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="offline_start_game">Start Game</string>
     <string name="title_activity_offline_configuration">OfflineConfigurationActivity</string>
     <string name="hello_world">Hello world!</string>
-    <string name="offline">Offline</string>
+    <string name="offline">Play Offline</string>
     <string name="title_activity_offline_game">OfflineGameActivity</string>
     <string name="offline_move_done">Done</string>
     <string name="offline_move_reset">Reset</string>
