--- a/android-application/ChineseCheckers/src/main/res/values/strings.xml
+++ b/android-application/ChineseCheckers/src/main/res/values/strings.xml
@@ -7,7 +7,8 @@
     <string name="offline_start_game">Start Game</string>
     <string name="title_activity_offline_configuration">OfflineConfigurationActivity</string>
     <string name="hello_world">Hello world!</string>
-    <string name="offline">Play Offline</string>
+    <string name="play_offline">Play Offline</string>
+    <string name="offline">Offline</string>
     <string name="title_activity_offline_game">OfflineGameActivity</string>
     <string name="offline_move_done">Done</string>
     <string name="offline_move_reset">Reset</string>
@@ -17,4 +18,10 @@
     <string name="ai_easy">Easy</string>
     <string name="ai_medium">Medium</string>
     <string name="ai_hard">Hard</string>
+    <string name="saved_game_dialog_quit">Quit</string>
+    <string name="saved_game_dialog_resume">Resume</string>
+    <string name="saved_game_dialog_text">Would you like to continue the saved game?</string>
+    <string name="end_game_dialog_text">Would you like to play a new game?</string>
+    <string name="end_game_dialog_home">Home</string>
+    <string name="end_game_dialog_new">New Game</string>
 </resources>
