--- a/android-application/ChineseCheckers/src/main/res/values/strings.xml
+++ b/android-application/ChineseCheckers/src/main/res/values/strings.xml
@@ -4,12 +4,12 @@
     <string name="app_name">Chinese Checkers</string>
     <string name="action_help">Help</string>
     <string name="action_settings">Settings</string>
-    <string name="offline_start_game">Start Game</string>
     <string name="title_activity_offline_configuration">OfflineConfigurationActivity</string>
+    <string name="title_activity_offline_game">OfflineGameActivity</string>
     <string name="hello_world">Hello world!</string>
     <string name="play_offline">Play Offline</string>
     <string name="offline">Offline</string>
-    <string name="title_activity_offline_game">OfflineGameActivity</string>
+    <string name="offline_start_game">Start Game</string>
     <string name="offline_move_done">Done</string>
     <string name="offline_move_reset">Reset</string>
     <string name="title_activity_help">Help</string>
@@ -30,6 +30,12 @@
     <string name="offline_end_game_message">Would you like to play a new game?</string>
     <string name="offline_end_game_accept">New Game</string>
     <string name="offline_end_game_decline">Home</string>
+
     <string name="play_online">Play Online</string>
+    <string name="online">Online</string>
+    <string name="online_new_game">New Game</string>
+    <string name="online_games">Online Games</string>
+    <string name="settings_show_possible_moves">Show possible moves</string>
+    <string name="settings_your_username">Your username</string>
 
 </resources>
