added new game dialog with all functionality except for server call. #148

--- a/android-application/ChineseCheckers/src/main/res/values/strings.xml
+++ b/android-application/ChineseCheckers/src/main/res/values/strings.xml
@@ -37,5 +37,7 @@
     <string name="online_games">Online Games</string>
     <string name="settings_show_possible_moves">Show possible moves</string>
     <string name="settings_your_username">Your username</string>
+    <string name="cancel">Cancel</string>
+    <string name="accept">Accept</string>
 
 </resources>
